--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="en" manifest="index.manifest">
+<html lang="en">
+<!--<html lang="en" manifest="index.manifest">-->
   <head>
     
     <title>Caravaggio</title>
