basic working framework, tweaking algorithm now

--- a/index.html
+++ b/index.html
@@ -15,13 +15,8 @@
     <script src="bower_components/jquery/dist/jquery.min.js"></script>
     <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
     <script src="bower_components/getusermedia.js/dist/getUserMedia.min.js"></script>
-    <script src="webgl-utils.js"></script>
 
     <script src="caravaggio.js"></script>
-
-    <script type="x-shader/x-vertex" id="shader-vs"></script>
-    <script type="x-shader/x-fragment" id="shader-fs-template"></script>
-    <script type="x-shader/x-fragment" id="shader-fs"></script>
 
   </head>
 
@@ -30,14 +25,22 @@
     <div class="">
 
       <div style="display:none;"><div id="webcam"></div></div>
-      <canvas id="image"></canvas>
+      <canvas id="canvas"></canvas>
+      <canvas id="original"></canvas>
+      <canvas id="live"></canvas>
       <a id="download"></a>
 
     </div>
 
     <script>
       jQuery(document).ready(function($) {
-        // initialize
+
+        $T.initialize({
+          // width: ,
+          // height: 
+        })
+        setInterval($T.capture,33)
+
       })
     </script>
 
