looking OK now!

--- a/index.html
+++ b/index.html
@@ -25,12 +25,20 @@
     <div class="">
 
       <div class="program">
-        <textarea cols="35" rows="8" class="program">dark = 120;
-r = lr;
-g = lg;
-b = lb;
-a = 255;</textarea>
-        <p><a class="btn btn-primary" onClick="$T.set_program($('textarea.program').html())">Run</a></p>
+        <textarea cols="50" rows="20" class="program">
+dark = 120;
+
+r = or-dark;
+g = og-dark;
+b = ob-dark;
+
+diff*=10;
+r += lr*diff-50;
+g += lg*diff-50;
+b += lb*diff-50;
+a = 255;
+</textarea>
+        <p><a class="btn btn-primary" onClick="$T.set_program($('textarea.program').val())">Run</a></p>
       </div>
 
       <div style="display:none;"><div id="webcam"></div></div>
